# Pidgin-Encryption-sj

./: CHANGELOG  INSTALL  Makefile.am  Makefile.in  Makefile.mingw  NOTES  README  WISHLIST  aclocal.m4  config_ui.c  config_ui.h  configure  configure.ac  cryptproto.c  cryptproto.h  cryptutil.c  cryptutil.h  encrypt.c  encrypt.h  gpg.c  gpg.h  icon_in_lock.xpm  icon_out_capable.xpm  icon_out_lock.xpm  internal.h  keys.c  keys.h  keys_ui.c  keys_ui.h  nls.h  nonce.c  nonce.h  nss_mgf1.c  nss_mgf1.h  nss_oaep.c  nss_oaep.h  nss_pss.c  nss_pss.h  pe_blist.c  pe_blist.h  (+12 more)
intl/: Makefile.in  bindtextdom.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  explodename.c  finddomain.c  gettext.c  intl-compat.c  l10nflist.c  loadmsgcat.c  localcharset.c  localealias.c  ngettext.c  plural.c  plural.y  textdomain.c
nsis/translations/: bulgarian.nsh  czech.nsh  danish.nsh  dutch.nsh  english.nsh  french.nsh  german.nsh  hungarian.nsh  italian.nsh  japanese.nsh  lithuanian.nsh  norwegian.nsh  polish.nsh  portuguese.nsh  portugueseBR.nsh  romanian.nsh  russian.nsh  simp-chinese.nsh  slovenian.nsh  spanish.nsh  trad-chinese.nsh  turkish.nsh  ukrainian.nsh
pixmaps/: Makefile.am  Makefile.in  mkinstalldirs
po/: Makefile.mingw  POTFILES.in  bg.gmo  bg.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  lt.gmo  lt.po  nl.gmo  nl.po  nn.gmo  nn.po  pidgin-encryption.pot  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  pt_PT.gmo  pt_PT.po  ro.gmo  ro.po  ru.gmo  ru.po  sl.gmo  sl.po  sv.gmo  (+11 more)
